crates/protocol/tests/snapshots/e2e_snapshot_tests__e2e_class_with_qualified_property.snap
---
source: crates/protocol/tests/e2e_snapshot_tests.rs
expression: json
---
{
  "elements": [
    {
      "_type": "class",
      "name": "Person",
      "package": "model::domain",
      "properties": [
        {
          "genericType": {
            "rawType": {
              "fullPath": "String",
              "sourceInformation": {
                "endColumn": 21,
                "endLine": 19,
                "sourceId": "class_with_qualified_property.pure",
                "startColumn": 16,
                "startLine": 19
              }
            },
            "sourceInformation": {
              "endColumn": 21,
              "endLine": 19,
              "sourceId": "class_with_qualified_property.pure",
              "startColumn": 16,
              "startLine": 19
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "firstName",
          "sourceInformation": {
            "endColumn": 13,
            "endLine": 19,
            "sourceId": "class_with_qualified_property.pure",
            "startColumn": 5,
            "startLine": 19
          }
        },
        {
          "genericType": {
            "rawType": {
              "fullPath": "String",
              "sourceInformation": {
                "endColumn": 20,
                "endLine": 20,
                "sourceId": "class_with_qualified_property.pure",
                "startColumn": 15,
                "startLine": 20
              }
            },
            "sourceInformation": {
              "endColumn": 20,
              "endLine": 20,
              "sourceId": "class_with_qualified_property.pure",
              "startColumn": 15,
              "startLine": 20
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "lastName",
          "sourceInformation": {
            "endColumn": 12,
            "endLine": 20,
            "sourceId": "class_with_qualified_property.pure",
            "startColumn": 5,
            "startLine": 20
          }
        }
      ],
      "qualifiedProperties": [
        {
          "body": [
            {
              "_type": "func",
              "function": "plus",
              "parameters": [
                {
                  "_type": "func",
                  "function": "plus",
                  "parameters": [
                    {
                      "_type": "property",
                      "parameters": [
                        {
                          "_type": "var",
                          "name": "this",
                          "sourceInformation": {
                            "endColumn": 9,
                            "endLine": 23,
                            "sourceId": "class_with_qualified_property.pure",
                            "startColumn": 9,
                            "startLine": 23
                          }
                        }
                      ],
                      "property": "firstName",
                      "sourceInformation": {
                        "endColumn": 14,
                        "endLine": 23,
                        "sourceId": "class_with_qualified_property.pure",
                        "startColumn": 14,
                        "startLine": 23
                      }
                    },
                    {
                      "_type": "var",
                      "name": "sep",
                      "sourceInformation": {
                        "endColumn": 27,
                        "endLine": 23,
                        "sourceId": "class_with_qualified_property.pure",
                        "startColumn": 27,
                        "startLine": 23
                      }
                    }
                  ],
                  "sourceInformation": {
                    "endColumn": 25,
                    "endLine": 23,
                    "sourceId": "class_with_qualified_property.pure",
                    "startColumn": 25,
                    "startLine": 23
                  }
                },
                {
                  "_type": "property",
                  "parameters": [
                    {
                      "_type": "var",
                      "name": "this",
                      "sourceInformation": {
                        "endColumn": 34,
                        "endLine": 23,
                        "sourceId": "class_with_qualified_property.pure",
                        "startColumn": 34,
                        "startLine": 23
                      }
                    }
                  ],
                  "property": "lastName",
                  "sourceInformation": {
                    "endColumn": 39,
                    "endLine": 23,
                    "sourceId": "class_with_qualified_property.pure",
                    "startColumn": 39,
                    "startLine": 23
                  }
                }
              ],
              "sourceInformation": {
                "endColumn": 32,
                "endLine": 23,
                "sourceId": "class_with_qualified_property.pure",
                "startColumn": 32,
                "startLine": 23
              }
            }
          ],
          "name": "fullName",
          "parameters": [
            {
              "_type": "var",
              "genericType": {
                "rawType": {
                  "fullPath": "String",
                  "sourceInformation": {
                    "endColumn": 24,
                    "endLine": 21,
                    "sourceId": "class_with_qualified_property.pure",
                    "startColumn": 19,
                    "startLine": 21
                  }
                },
                "sourceInformation": {
                  "endColumn": 24,
                  "endLine": 21,
                  "sourceId": "class_with_qualified_property.pure",
                  "startColumn": 19,
                  "startLine": 21
                }
              },
              "multiplicity": {
                "lowerBound": 1,
                "upperBound": 1
              },
              "name": "sep",
              "sourceInformation": {
                "endColumn": 16,
                "endLine": 21,
                "sourceId": "class_with_qualified_property.pure",
                "startColumn": 14,
                "startLine": 21
              }
            }
          ],
          "returnGenericType": {
            "rawType": {
              "fullPath": "String",
              "sourceInformation": {
                "endColumn": 13,
                "endLine": 24,
                "sourceId": "class_with_qualified_property.pure",
                "startColumn": 8,
                "startLine": 24
              }
            },
            "sourceInformation": {
              "endColumn": 13,
              "endLine": 24,
              "sourceId": "class_with_qualified_property.pure",
              "startColumn": 8,
              "startLine": 24
            }
          },
          "returnMultiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "sourceInformation": {
            "endColumn": 12,
            "endLine": 21,
            "sourceId": "class_with_qualified_property.pure",
            "startColumn": 5,
            "startLine": 21
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 5,
        "endLine": 17,
        "sourceId": "class_with_qualified_property.pure",
        "startColumn": 1,
        "startLine": 17
      }
    },
    {
      "_type": "sectionIndex",
      "name": "class_with_qualified_property.pure",
      "package": "__internal__",
      "sections": [
        {
          "_type": "default",
          "elements": [
            "model::domain::Person"
          ],
          "parserName": "Pure",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 16,
            "sourceId": "class_with_qualified_property.pure",
            "startColumn": 1,
            "startLine": 16
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 16,
        "sourceId": "class_with_qualified_property.pure",
        "startColumn": 1,
        "startLine": 16
      }
    }
  ],
  "serializer": {
    "name": "pure",
    "version": "vX_X_X"
  }
}
