crates/protocol/tests/snapshots/e2e_snapshot_tests__e2e_enumeration.snap
---
source: crates/protocol/tests/e2e_snapshot_tests.rs
expression: json
---
{
  "elements": [
    {
      "_type": "Enumeration",
      "name": "Color",
      "package": "model",
      "sourceInformation": {
        "endColumn": 4,
        "endLine": 2,
        "sourceId": "enumeration.pure",
        "startColumn": 1,
        "startLine": 2
      },
      "values": [
        {
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 4,
            "sourceId": "enumeration.pure",
            "startColumn": 5,
            "startLine": 4
          },
          "value": "RED"
        },
        {
          "sourceInformation": {
            "endColumn": 9,
            "endLine": 5,
            "sourceId": "enumeration.pure",
            "startColumn": 5,
            "startLine": 5
          },
          "value": "GREEN"
        },
        {
          "sourceInformation": {
            "endColumn": 8,
            "endLine": 6,
            "sourceId": "enumeration.pure",
            "startColumn": 5,
            "startLine": 6
          },
          "value": "BLUE"
        }
      ]
    },
    {
      "_type": "sectionIndex",
      "name": "enumeration.pure",
      "package": "__internal__",
      "sections": [
        {
          "_type": "default",
          "elements": [
            "model::Color"
          ],
          "parserName": "Pure",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 1,
            "sourceId": "enumeration.pure",
            "startColumn": 1,
            "startLine": 1
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 1,
        "sourceId": "enumeration.pure",
        "startColumn": 1,
        "startLine": 1
      }
    }
  ],
  "serializer": {
    "name": "pure",
    "version": "vX_X_X"
  }
}
