crates/protocol/tests/snapshots/e2e_snapshot_tests__e2e_function.snap
---
source: crates/protocol/tests/e2e_snapshot_tests.rs
expression: json
---
{
  "elements": [
    {
      "_type": "function",
      "body": [
        {
          "_type": "func",
          "function": "plus",
          "parameters": [
            {
              "_type": "string",
              "sourceInformation": {
                "endColumn": 12,
                "endLine": 19,
                "sourceId": "function.pure",
                "startColumn": 5,
                "startLine": 19
              },
              "value": "Hello "
            },
            {
              "_type": "var",
              "name": "name",
              "sourceInformation": {
                "endColumn": 16,
                "endLine": 19,
                "sourceId": "function.pure",
                "startColumn": 16,
                "startLine": 19
              }
            }
          ],
          "sourceInformation": {
            "endColumn": 14,
            "endLine": 19,
            "sourceId": "function.pure",
            "startColumn": 14,
            "startLine": 19
          }
        }
      ],
      "name": "greet",
      "package": "my",
      "parameters": [
        {
          "genericType": {
            "rawType": {
              "fullPath": "String",
              "sourceInformation": {
                "endColumn": 31,
                "endLine": 17,
                "sourceId": "function.pure",
                "startColumn": 26,
                "startLine": 17
              }
            },
            "sourceInformation": {
              "endColumn": 31,
              "endLine": 17,
              "sourceId": "function.pure",
              "startColumn": 26,
              "startLine": 17
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "name",
          "sourceInformation": {
            "endColumn": 23,
            "endLine": 17,
            "sourceId": "function.pure",
            "startColumn": 20,
            "startLine": 17
          }
        }
      ],
      "returnGenericType": {
        "rawType": {
          "fullPath": "String",
          "sourceInformation": {
            "endColumn": 43,
            "endLine": 17,
            "sourceId": "function.pure",
            "startColumn": 38,
            "startLine": 17
          }
        },
        "sourceInformation": {
          "endColumn": 43,
          "endLine": 17,
          "sourceId": "function.pure",
          "startColumn": 38,
          "startLine": 17
        }
      },
      "returnMultiplicity": {
        "lowerBound": 1,
        "upperBound": 1
      },
      "sourceInformation": {
        "endColumn": 8,
        "endLine": 17,
        "sourceId": "function.pure",
        "startColumn": 1,
        "startLine": 17
      }
    },
    {
      "_type": "sectionIndex",
      "name": "function.pure",
      "package": "__internal__",
      "sections": [
        {
          "_type": "default",
          "elements": [
            "my::greet"
          ],
          "parserName": "Pure",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 16,
            "sourceId": "function.pure",
            "startColumn": 1,
            "startLine": 16
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 16,
        "sourceId": "function.pure",
        "startColumn": 1,
        "startLine": 16
      }
    }
  ],
  "serializer": {
    "name": "pure",
    "version": "vX_X_X"
  }
}
