crates/protocol/tests/snapshots/e2e_snapshot_tests__e2e_measure.snap
---
source: crates/protocol/tests/e2e_snapshot_tests.rs
expression: json
---
{
  "elements": [
    {
      "_type": "measure",
      "canonicalUnit": {
        "conversionFunction": {
          "body": [
            {
              "_type": "var",
              "name": "x",
              "sourceInformation": {
                "endColumn": 18,
                "endLine": 19,
                "sourceId": "measure.pure",
                "startColumn": 18,
                "startLine": 19
              }
            }
          ],
          "parameters": [
            {
              "name": "x"
            }
          ],
          "sourceInformation": {
            "endColumn": 10,
            "endLine": 19,
            "sourceId": "measure.pure",
            "startColumn": 6,
            "startLine": 19
          }
        },
        "name": "pkg::Distance~Meter",
        "package": "pkg",
        "sourceInformation": {
          "endColumn": 10,
          "endLine": 19,
          "sourceId": "measure.pure",
          "startColumn": 6,
          "startLine": 19
        },
        "superTypes": [
          "pkg::Distance"
        ]
      },
      "name": "Distance",
      "nonCanonicalUnits": [
        {
          "conversionFunction": {
            "body": [
              {
                "_type": "func",
                "function": "times",
                "parameters": [
                  {
                    "_type": "var",
                    "name": "x",
                    "sourceInformation": {
                      "endColumn": 21,
                      "endLine": 20,
                      "sourceId": "measure.pure",
                      "startColumn": 21,
                      "startLine": 20
                    }
                  },
                  {
                    "_type": "integer",
                    "sourceInformation": {
                      "endColumn": 29,
                      "endLine": 20,
                      "sourceId": "measure.pure",
                      "startColumn": 26,
                      "startLine": 20
                    },
                    "value": 1000
                  }
                ],
                "sourceInformation": {
                  "endColumn": 24,
                  "endLine": 20,
                  "sourceId": "measure.pure",
                  "startColumn": 24,
                  "startLine": 20
                }
              }
            ],
            "parameters": [
              {
                "name": "x"
              }
            ],
            "sourceInformation": {
              "endColumn": 13,
              "endLine": 20,
              "sourceId": "measure.pure",
              "startColumn": 5,
              "startLine": 20
            }
          },
          "name": "pkg::Distance~Kilometer",
          "package": "pkg",
          "sourceInformation": {
            "endColumn": 13,
            "endLine": 20,
            "sourceId": "measure.pure",
            "startColumn": 5,
            "startLine": 20
          },
          "superTypes": [
            "pkg::Distance"
          ]
        }
      ],
      "package": "pkg",
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 17,
        "sourceId": "measure.pure",
        "startColumn": 1,
        "startLine": 17
      }
    },
    {
      "_type": "sectionIndex",
      "name": "measure.pure",
      "package": "__internal__",
      "sections": [
        {
          "_type": "default",
          "elements": [
            "pkg::Distance"
          ],
          "parserName": "Pure",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 16,
            "sourceId": "measure.pure",
            "startColumn": 1,
            "startLine": 16
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 16,
        "sourceId": "measure.pure",
        "startColumn": 1,
        "startLine": 16
      }
    }
  ],
  "serializer": {
    "name": "pure",
    "version": "vX_X_X"
  }
}
