crates/protocol/tests/snapshots/e2e_snapshot_tests__e2e_multi_element.snap
---
source: crates/protocol/tests/e2e_snapshot_tests.rs
expression: json
---
{
  "elements": [
    {
      "_type": "class",
      "name": "Person",
      "package": "model",
      "properties": [
        {
          "genericType": {
            "rawType": {
              "fullPath": "String",
              "sourceInformation": {
                "endColumn": 16,
                "endLine": 4,
                "sourceId": "multi_element.pure",
                "startColumn": 11,
                "startLine": 4
              }
            },
            "sourceInformation": {
              "endColumn": 16,
              "endLine": 4,
              "sourceId": "multi_element.pure",
              "startColumn": 11,
              "startLine": 4
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "name",
          "sourceInformation": {
            "endColumn": 8,
            "endLine": 4,
            "sourceId": "multi_element.pure",
            "startColumn": 5,
            "startLine": 4
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 5,
        "endLine": 2,
        "sourceId": "multi_element.pure",
        "startColumn": 1,
        "startLine": 2
      }
    },
    {
      "_type": "Enumeration",
      "name": "Status",
      "package": "model",
      "sourceInformation": {
        "endColumn": 4,
        "endLine": 7,
        "sourceId": "multi_element.pure",
        "startColumn": 1,
        "startLine": 7
      },
      "values": [
        {
          "sourceInformation": {
            "endColumn": 10,
            "endLine": 9,
            "sourceId": "multi_element.pure",
            "startColumn": 5,
            "startLine": 9
          },
          "value": "ACTIVE"
        },
        {
          "sourceInformation": {
            "endColumn": 12,
            "endLine": 10,
            "sourceId": "multi_element.pure",
            "startColumn": 5,
            "startLine": 10
          },
          "value": "INACTIVE"
        }
      ]
    },
    {
      "_type": "function",
      "body": [
        {
          "_type": "func",
          "function": "plus",
          "parameters": [
            {
              "_type": "string",
              "sourceInformation": {
                "endColumn": 12,
                "endLine": 15,
                "sourceId": "multi_element.pure",
                "startColumn": 5,
                "startLine": 15
              },
              "value": "Hello "
            },
            {
              "_type": "property",
              "parameters": [
                {
                  "_type": "var",
                  "name": "p",
                  "sourceInformation": {
                    "endColumn": 16,
                    "endLine": 15,
                    "sourceId": "multi_element.pure",
                    "startColumn": 16,
                    "startLine": 15
                  }
                }
              ],
              "property": "name",
              "sourceInformation": {
                "endColumn": 18,
                "endLine": 15,
                "sourceId": "multi_element.pure",
                "startColumn": 18,
                "startLine": 15
              }
            }
          ],
          "sourceInformation": {
            "endColumn": 14,
            "endLine": 15,
            "sourceId": "multi_element.pure",
            "startColumn": 14,
            "startLine": 15
          }
        }
      ],
      "name": "greetPerson",
      "package": "model",
      "parameters": [
        {
          "genericType": {
            "rawType": {
              "fullPath": "model::Person",
              "sourceInformation": {
                "endColumn": 44,
                "endLine": 13,
                "sourceId": "multi_element.pure",
                "startColumn": 39,
                "startLine": 13
              }
            },
            "sourceInformation": {
              "endColumn": 36,
              "endLine": 13,
              "sourceId": "multi_element.pure",
              "startColumn": 32,
              "startLine": 13
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "p",
          "sourceInformation": {
            "endColumn": 29,
            "endLine": 13,
            "sourceId": "multi_element.pure",
            "startColumn": 29,
            "startLine": 13
          }
        }
      ],
      "returnGenericType": {
        "rawType": {
          "fullPath": "String",
          "sourceInformation": {
            "endColumn": 56,
            "endLine": 13,
            "sourceId": "multi_element.pure",
            "startColumn": 51,
            "startLine": 13
          }
        },
        "sourceInformation": {
          "endColumn": 56,
          "endLine": 13,
          "sourceId": "multi_element.pure",
          "startColumn": 51,
          "startLine": 13
        }
      },
      "returnMultiplicity": {
        "lowerBound": 1,
        "upperBound": 1
      },
      "sourceInformation": {
        "endColumn": 8,
        "endLine": 13,
        "sourceId": "multi_element.pure",
        "startColumn": 1,
        "startLine": 13
      }
    },
    {
      "_type": "sectionIndex",
      "name": "multi_element.pure",
      "package": "__internal__",
      "sections": [
        {
          "_type": "default",
          "elements": [
            "model::Person",
            "model::Status",
            "model::greetPerson"
          ],
          "parserName": "Pure",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 1,
            "sourceId": "multi_element.pure",
            "startColumn": 1,
            "startLine": 1
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 1,
        "sourceId": "multi_element.pure",
        "startColumn": 1,
        "startLine": 1
      }
    }
  ],
  "serializer": {
    "name": "pure",
    "version": "vX_X_X"
  }
}
